resilient/tests/it/snapshots/it__diagnostics_snapshots__parser_missing_equals_in_let@parser_missing_equals_in_let.snap
---
source: tests/diagnostics_snapshots.rs
description: "fn main(int _d) { let x 1; return 0; } main(0);\n"
expression: output
---
Parser error: 1:25: Expected '=' after identifier 'x' in let statement, found integer literal `1`
1:25: Expected '=' after identifier 'x' in let statement, found integer literal `1`
Parser error: Expected '=' after identifier 'x' in let statement, found integer literal `1`
   fn main(int _d) { let x 1; return 0; } main(0);
                           ^
Error: Failed to parse program: 1 parser error(s)
